syntax = "proto3";

service PuppetMasterService {
	rpc Print(PrintRequest) returns (PrintReply);
}

message PrintRequest {

}

message PrintReply {

}
