syntax = "proto3";

service SchedulerDebugService {
	rpc Debug(DebugRequest) returns (DebugReply);
}

message DebugRequest {

}

message DebugReply {
	bool Ok = 1;
}