syntax = "proto3";

service SchedulerService {
	rpc pingSHW(pingSHWRequest) returns (pingSHWReply);
}

message pingSHWRequest {
}

message pingSHWReply {
	int32 ok = 1;
}